# bone-fracture-detection-pytorch

./: .dockerignore  .dvcignore  .gitignore  .pre-commit-config.yaml  01_preprocessing.ipynb  02_model_training.ipynb  Dockerfile  README.md  aws-deployment.yaml  dvc.yaml  kind-deployment.yaml  makefile  pyproject.toml  requirements.txt  results.dvc
.devcontainer/: devcontainer.json
.devcontainer/local-features/copy-kube-config/: copy-kube-config.sh
.dvc/: config
.github/stop.workflows/: ci_cd.yaml
.github/workflows/: ci.yaml  ci_cd.yaml  tests.yml
app/: app.py  fetch_model_s3.py  pyproject.toml
app/static/: styles.css
app/static/app/: styles.css
app/templates/: index.html
conf/: config.yaml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml  rich_progress_bar.yaml
configs/data/: .gitignore  default.yaml  lung_colon_cancer_images.yaml  preprocessor.yaml  preprocessor.yaml.dvc
configs/datamodule/: default.yaml  lung_colon_datamodule.yaml
configs/experiment/: find_cnn_layers.yaml
configs/hparams_search/: cnn_layers_search_optuna.yaml
configs/logger/: mlflow.yaml  mlflow_logger.yaml
configs/model/: default.yaml  lung_colon_cancer_classifier.yaml
configs/model/net/: custom_conv_net.yaml
configs/model/optimizer/: adam.yaml
configs/model/scheduler/: none.yaml  reduce_lr_on_plateau.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
datasets/: processed.dvc  raw.dvc
docs/: aws-eks.md  kubernets-kind.md
hp_finding/: hp_finder.py  tunable_model.py
notebooks/: 01_EDA.ipynb  01_preprocessing.ipynb  02_preprocessing.ipynb  03_model_building.ipynb  04_evaluation.ipynb
scripts/: demo.webm
src/: eval.py  train.py
src/cloud_storage/: .gitignore  __init__.py.dvc  aws_storage.py  aws_storage.py.dvc
src/components/: .gitignore
src/connections/: .gitignore  aws_connection.py  aws_connection.py.dvc  dagshub_connections.py
src/data/: data_processor.py  data_split.py
src/datamodule/: lung_colon_cancer_datamodule.py
src/entity/: aws_secrets.py  aws_secrets.py.dvc  best_cnn_model.py  best_cnn_model.py.dvc  s3_classifier.py  s3_classifier.py.dvc
src/model/: lung_colon_cancer_classifier.py
src/model/net/: custom_conv_net.py  net_model.py
src/model/nets/: custom_conv_net.py
src/utils/: __init__.py  download_kaggel_ds.py  instantiators.py  logging_utils.py  rich_utils.py  utils.py
tests/model/: test_custom_net.py
trained_model/2025-05-12_14-31-13/.hydra/: config.yaml  hydra.yaml
utils/: bounding_box_funcs.py  prepare_dataset.py  visualization_funcs.py
