[project]
name = "bone-fracture-detect-densenet121-transfer-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "mlflow>=2.20.1",
    "opendatasets>=0.1.22",
    "python-dotenv>=1.0.1",
    "tensorflow>=2.18.0",
]
