[project]
name = "bone-fracture-detect-YOLOv8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "keras-cv",
    "matplotlib>=3.10.0",
    "mlflow>=2.20.1",
    "opencv-python>=4.11.0.86",
    "opendatasets>=0.1.22",
    "python-dotenv>=1.0.1",
    "tensorflow>=2.18.0",
]

[tool.uv.sources]
keras-cv = { git = "https://github.com/keras-team/keras-cv" }
