[project]
name = "Lung-and-Colon-Cancer-Classification-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "lightning>=2.5.1.post0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.9.1",
    "pyrootutils>=1.0.4",
    "pytorch-lightning>=2.5.1.post0",
    "torchmetrics>=1.7.1",
    "torchvision>=0.22.0",
    "rich>=14.0.0",
    "pandas>=2.2.3",
    "boto3>=1.38.10",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.1",
    "types-seaborn>=0.13.2.20250516",
]
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
